Fix file URL creation in HttpContextWrapper
383718: Wrong resource URL leads to "java.lang.IllegalArgumentException:
URI is not hierarchical"
https://bugs.eclipse.org/bugs/show_bug.cgi?id=383718